# inverter

./: .gitignore  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml
src/: main.py  test_main.py
