[tool.poetry]
name = "engie"
version = "0.1.0"
description = ""
authors = ["malik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.2.0"
black = "^22.10.0"
fastapi = {extras = ["uvicorn"], version = "^0.86.0"}
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
